public/style.css
/* ... */
.btn-white-sm {
	font-size: 12px;
	display: inline-block;
	padding: 5px 10px;
	margin-right: 10px;
	color: #000000;
	letter-spacing: 1px;
	border: 1px solid #000000;
}

.btn-white-sm:hover {
	border: 1px solid #000000;
	background: #000000;
	color: #ffffff;
}

/* ================================
 	2. HEADER
   ================================ */
.header {
	min-height: 80px;
}

.navbar-brand {
	font-size: 22px;
	letter-spacing: 4px;
}

.navbar-nav {
	margin-top: 0px;
}

.navbar-brand {
	padding-left: 0;
}

.navbar-brand img {
	filter: brightness(0) invert(1);
	-webkit-filter: brightness(0) invert(1);
}

.nav li {
	padding-left: 18px;
	padding-right: 18px;
}

.nav li:last-child {
	padding-right: 0px;
}

.nav li a {
	padding: 31px 0px;
	letter-spacing: 2px;
}

.navbar {
	margin-bottom: 0;
}

.nav li a:focus,
.nav li a:hover {
	background: none;
}

.fixed-nav {
	background: rgba(0, 0, 0, 0.9);
	backdrop-filter: blur(10px);
	-webkit-backdrop-filter: blur(10px);
	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
}

.fixed-nav .navbar-brand,
.fixed-nav .nav li a {
	color: #ffffff !important;
}

.fixed-nav .navbar-toggle .icon-bar {
	background-color: #ffffff !important;
}

.nav a i {
	margin-left: 5px;
}

.dropdown-menu {
	padding: 0;
	font-size: 12px;
	background-color: #fff;
	border-left: 1px solid #f5f5f5;
	border-right: 1px solid #f5f5f5;
	border-bottom: 1px solid #f5f5f5;
	border-top: 1px solid transparent;
	border-radius: 0;
	-webkit-box-shadow: 0 6px 12px transparent;
	box-shadow: 0 6px 12px transparent;
}

.dropdown-menu li {
	padding-left: 0px;
	padding-right: 0px;
}

.dropdown-menu li a {
	padding: 10px 15px;
	font-weight: normal;
	color: #000000;
}

.dropdown-menu li a:hover {
	background: #f5f5f5 !important;
	border: none;
}

.nav .open a,
.nav .open a:focus,
.nav .open a:hover {
	background-color: transparent;
	border: none;
}

.dropdown-submenu {
	position: relative;
}

.dropdown-submenu .dropdown-menu {
	top: 0;
	left: 100%;
	margin-top: 0;
	border-left: 1px solid #f5f5f5;
	border-right: 1px solid #f5f5f5;
	border-bottom: 1px solid #f5f5f5;
	border-top: 1px solid #f5f5f5;
}

.dropdown-menu .active a,
.dropdown-menu .active a:focus,
.dropdown-menu .active a:hover {
	color: #000;
	text-decoration: none;
	background-color: #f5f5f5 !important;
	outline: 0;
}

.navbar-toggle .icon-bar {
	background-color: #ffffff !important;
}

.navbar-toggle {
	margin-top: 23px;
}

/* ================================
 	3. SLIDER POST
   ================================ */
.slider {
	overflow: hidden;
}

.slider .slider-content {
	overflow: visible;
	width: 100%;
	position: absolute;
	bottom: 0;
	text-align: center;
}

.slider-img {
	position: relative;
	width: 100%;
	height: 100%;
	min-height: 1000px;
}

.bg-feature {
	background: rgba(255, 255, 255, 0.8);
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
}

.slider-img img {
	width: 100%;
	height: auto;
}

.carousel-caption {
	top: 30%;
	right: 0%;
	left: 0%;
	text-shadow: 0 1px 2px transparent;
}

.feature-post h1 {
	font-weight: 100;
}

.feature-post .date span {
	letter-spacing: 4px;
	font-size: 14px;
}

.feature-post .read-more i {
	margin-left: 7px;
}

.slider .left-arrow .fa-angle-left,
.thum-item .left-arrow .fa-angle-left {
	position: absolute;
	top: 45%;
	left: -50px;
	color: #000000;
	-webkit-transition: all 0.3s linear;
	-moz-transition: all 0.3s linear;
	-o-transition: all 0.3s linear;
	transition: all 0.3s linear;
}

.slider .right-arrow,
.thum-item .right-arrow {
	right: 0;
	left: auto;
}

.slider .right-arrow .fa-angle-right,
.thum-item .right-arrow .fa-angle-right {
	position: absolute;
	top: 45%;
	right: -50px;
	display: inline-block;
	color: #000000;
	font-size: 70px;
	-webkit-transition: all 0.3s linear;
	-moz-transition: all 0.3s linear;
	-o-transition: all 0.3s linear;
	transition: all 0.3s linear;
}

.carousel-indicators .active {
	width: 30px;
	height: 8px;
}

.carousel-indicators li {
	display: inline-block;
	width: 20px;
	height: 8px;
	margin: 0px;
	text-indent: -999px;
	cursor: pointer;
	background-color: #000 \9;
	background-color: rgba(0, 0, 0, 0);
	border: 1px solid #777;
	border-radius: 0px;
}

.style-two {
	background: url(images/bg1.jpg);
	text-align: center;
}

.style-two img {
	margin: auto;
	display: table;
	border-radius: 50%;

}

.style-two h1 {
	font-weight: 100;
	margin-top: 70px;
	font-size: 72px;
}

.style-two h2 {
	font-weight: normal;
	margin-top: 30px;
	font-size: 24px;
}

.style-two p {
	font-weight: 100;
	margin-top: 40px;
	font-size: 13px;
	margin-bottom: 100px;
}

.style-two .bg-style-two {
	padding-top: 200px;
	background: rgba(255, 255, 255, 0.8);
	min-height: 600px;
}

/* ================================
 	4. CONTENT
   ================================ */

#content {
	margin-top: 80px;
}

.thum-item {
	margin-bottom: 60px;
	overflow: hidden;
}

.thum-item img {
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	-o-transition: all 0.5s;
	transition: all 0.5s;
}

.thum-item:hover img {
	-webkit-transform: scale(1.1);
	-ms-transform: scale(1.1);
	-o-transform: scale(1.1);
	transform: scale(1.1);

}

.blog-post {
	margin-bottom: 100px;
}

.blog-post .meta {
	overflow: hidden;
}

.blog-post .meta ul li,
.blog-post .meta ul li a {
	font-size: 12px;
	color: #7c7c7c;
	letter-spacing: 2px;
	text-transform: uppercase;
	line-height: 30px;
}

.blog-post .meta ul {
	list-style: none;
}

.blog-post .meta ul li {
	float: left;
}

.blog-post .meta ul li+li:before {
	content: "/";
	padding: 0 10px;
}

.blog-post .meta span {
	margin-left: 10px;
	margin-right: 10px;
}

.blog-post .content {
	margin: 45px 0;
}

.blog-post .post-bottom {
	overflow: hidden;
}

.blog-post .continue {
	float: left;
	letter-spacing: 2px;
	margin-top: 20px;
}

.blog-post .share-iocn {
	float: right;
	margin-top: 20px;
}

.blog-post .share-iocn .share {
	margin-right: 20px;
}

.blog-post .share-iocn .icon a {
	padding: 0 7px;
	font-size: 14px;

}
/* ... */

